2003-11-03  Patrick Mansfield <patmans@users.sourceforge.net>
	* sierra.c: mark Epson PhotoPC 650 as SIERRA_NO_51, per bug 
	  report 831290 from Brian Lee.

2003-11-03  Patrick Mansfield <patmans@users.sourceforge.net>
	* nikon-desc.c: update a comment about the behaviour of cp 880 and
	  register 30.

2003-09-17  Marcus Meissner <marcus@jet.franken.de>
	
	* library.c: we were closing a context id we never opened. Not good.

2003-09-13  Patrick Mansfield <patmans@users.sourceforge.net>
	* epson-desc.c: remove unused commented out code.

2003-09-13  Patrick Mansfield <patmans@users.sourceforge.net>
	* epson-desc.c sierra.c: get rid of C++ style comments.

2003-08-30  Patrick Mansfield <patmans@users.sourceforge.net>
	* olympus-desc.c, sierra.c, sierra-desc.h: Add specific values
	  for the Olympus 3000z, based on input from Till Kamppeter
	  <till.kamppeter@gmx.net>.

2003-08-26  Patrick Mansfield <patmans@users.sourceforge.net>
	* library.c: Fix so on receipt of an unknown packet and a read of
	  zero bytes, we don't loop forever.

2003-06-14  Dan Fandrich <dan@coneharvesters.com>
	* epson-desc.c, nikon-desc.c, olympus-desc.c, sierra-desc.c, sierra.c:
	  include _stdint.h instead of stdint.h

2003-05-28  Patrick Mansfield <patmans@users.sourceforge.net>

	* epson-desc.c, nikon-desc.c, olympus-desc.c, and sierr.c
	  sierra-desc.c, sierra-desc.h, sierra.c: change u_int* to uint*_t,
	  and include stdint.h

2003-03-01  Patrick Mansfield <patmans@users.sourceforge.net>

	* sierra.c: Fix SIERRA_SKIP_INIT usage and add vendor/product
	  id's for Polaroid PDC 2300Z.

2003-02-27  Marcus Meissner <marcus@jet.franken.de>
	
	* library.c: We support EXIF download.

2003-02-15  Patrick Mansfield <patmans@users.sourceforge.net>

	* sierra.c, sierra.h: Add and use SIERRA_SKIP_INIT for use with 
	  Polaroid PDC 2300Z.

2003-02-15  Patrick Mansfield <patmans@users.sourceforge.net>

	* epson-desc.c, library.c, nikon-desc.c olympus-desc.c